Link data mining page in left menu.

--- a/public/bubble_chart.html
+++ b/public/bubble_chart.html
@@ -34,7 +34,7 @@ div.tooltip p {
 <script>
 
 var diameter_w = 960,
-    diameter_h = 480
+    diameter_h = 480,
     format = d3.format(",d"),
     color = d3.scale.category20c();
 
